<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/setting_toolbar"
        android:background="@color/primary"
        android:layout_width="match_parent"
        app:title="@string/title_settings"
        app:menu="@menu/settings_menu"
        app:titleTextColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_view_height"
        android:layout_marginHorizontal="@dimen/margin_double"
        android:layout_marginTop="@dimen/margin_normal"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@+id/setting_toolbar"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/add_photo_btn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/gray_light"
        android:src="@drawable/selector_camera"
        android:clickable="true"
        android:padding="@dimen/margin_double"
        app:layout_constraintBottom_toBottomOf="@+id/user_photo"
        app:layout_constraintEnd_toEndOf="@+id/user_photo"
        app:layout_constraintStart_toStartOf="@+id/user_photo"
        android:focusable="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_triple"
        android:layout_marginHorizontal="@dimen/margin_double"
        android:hint="@string/first_name"
        app:layout_constraintTop_toBottomOf="@+id/user_photo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_edittext"
            android:layout_width="match_parent"
            android:maxLength="20"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        android:layout_marginHorizontal="@dimen/margin_double"
        android:hint="@string/last_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthday_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        android:layout_marginHorizontal="@dimen/margin_double"
        android:hint="@string/date_of_birth"

        app:layout_constraintTop_toBottomOf="@+id/last_name_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>