<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="token"
            type="by.huk.crypto_currencies.data.entities.crypto.CryptoEntity" />
        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_nav_icon"
            app:titleTextColor="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">
                <!-- TODO !REFACTORING! Don't forget to use @dimen in all xml files -->
                <ImageView
                    android:id="@+id/symbol_toolbar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/margin_double"
                    android:gravity="center"
                    android:text="@{token.name}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/white"
                    tools:text="Bitcoin" />

            </LinearLayout>



        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_triple"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:transitionName="@{token.id}"
            app:layout_constraintTop_toBottomOf="@+id/details_toolbar"
            tools:layout_editor_absoluteX="24dp"
            tools:text="999999.9$" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/price"
            tools:layout_editor_absoluteX="4dp"
            tools:text="+9999.9%" />


        <com.yabu.livechart.view.LiveChart
            android:id="@+id/price_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/percent" />

        <TextView
            android:id="@+id/view_point"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_double"
            android:background="@drawable/shape_gray"
            android:padding="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="@+id/price_chart"
            app:layout_constraintStart_toStartOf="@+id/price_chart"
            app:layout_constraintTop_toBottomOf="@+id/percent" />

        <LinearLayout
            android:id="@+id/periods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/price_chart">

            <TextView
                android:id="@+id/item_24h"
                style="@style/period_item"
                android:layout_marginHorizontal="@dimen/margin_double"
                android:text="@string/_24h"
                 />

            <TextView
                android:id="@+id/item_1w"
                style="@style/period_item"
                android:textColor="@color/white"
                android:background="@drawable/shape_green"
                android:layout_marginHorizontal="@dimen/margin_double"
                android:text="@string/_1w" />

            <TextView
                android:id="@+id/item_1m"
                style="@style/period_item"
                android:layout_marginHorizontal="@dimen/margin_double"
                android:text="@string/_1m" />

            <TextView
                android:id="@+id/item_1y"
                style="@style/period_item"
                android:layout_marginHorizontal="@dimen/margin_double"
                android:text="@string/_1y" />

            <TextView
                android:id="@+id/item_all"
                style="@style/period_item"
                android:layout_marginHorizontal="@dimen/margin_double"
                android:text="@string/all" />


        </LinearLayout>

        <ImageView
            android:id="@+id/loading_anim"
            android:layout_width="60dp"
            android:layout_height="60dp"
            setVisibleGone="@{isLoading}"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/price_chart"
            app:layout_constraintEnd_toEndOf="@+id/price_chart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percent" />
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/margin_double"
            android:layout_marginVertical="@dimen/margin_triple"
            android:background="@color/gray_200"
            app:layout_constraintTop_toBottomOf="@+id/periods" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_double"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/market_cap"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:id="@+id/market_cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/primary"
                tools:text="$ 999.9 B" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>